Fix overflow of images

--- a/foundations/landing-page/style.css
+++ b/foundations/landing-page/style.css
@@ -104,6 +104,7 @@ button {
     width: 175px;
     height: 175px;
     flex: 0 1 auto;
+    overflow: hidden;
 }
 
 img {
